--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/supperdsj/Nodejs-Tutorial#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "request": "^2.73.0",
     "yargs": "^10.0.3"
   }
