post and get finish

--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "expect": "^1.20.2",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongodb": "^3.0.0-rc0",
-    "rewire": "^3.0.2",
-    "supertest": "^3.0.0"
+    "mongoose": "^4.13.7",
+    "rewire": "^3.0.2"
   },
   "devDependencies": {
-    "mocha": "^4.0.1"
+    "expect": "^1.20.2",
+    "mocha": "^4.0.1",
+    "nodemon": "^1.12.5",
+    "supertest": "^3.0.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha server/**/*.test.js",
+    "test-watch":"nodemon --exec 'npm test'"
   },
   "repository": {
     "type": "git",
