--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "nodemon": "^1.12.5",
     "supertest": "^3.0.0"
   },
+  "engines": {
+    "node":"8.9.1"
+  },
   "scripts": {
+    "start":"node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch":"nodemon --exec 'npm test'"
   },
