--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash": "^4.17.4",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
-    "rewire": "^3.0.2"
+    "rewire": "^3.0.2",
+    "validator": "^9.2.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
