--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
     "opbeat": "^4.16.0",
+    "request": "^2.83.0",
     "rewire": "^3.0.2",
     "validator": "^9.2.0"
   },
