--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
+    "start":"node server/server.js",
     "test": "mocha"
+  },
+  "engines":{
+    "node":"8.9.3"
   },
   "repository": {
     "type": "git",
