--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "mongoose": "^4.13.7",
     "nodemon": "^1.12.5",
     "rewire": "^3.0.2",
+    "socket.io": "^2.0.4",
     "supertest": "^3.0.0"
   },
   "devDependencies": {
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha"
   },
-  "engines":{
-    "node":"8.9.3"
+  "engines": {
+    "node": "8.9.3"
   },
   "repository": {
     "type": "git",
