--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.20.1",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
+    "mustache": "^2.3.0",
     "rewire": "^3.0.2",
     "socket.io": "^2.0.4",
     "supertest": "^3.0.0"
